--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Backend for Xyvin ERP System",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "jest"
   },
   "dependencies": {
@@ -20,7 +20,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "xyvin-erp-backend": "file:"
   },
   "devDependencies": {
     "jest": "^29.7.0",
