--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "xyvin-erp-backend": "file:"
   },
   "devDependencies": {
     "jest": "^29.7.0",
