--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Backend for Xyvin ERP System",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "jest"
   },
   "dependencies": {
