--- a/src/swagger/paths/employee.yaml
+++ b/src/swagger/paths/employee.yaml
@@ -1,5 +1,5 @@
 paths:
-  /api/hrm/employees:
+  /hrm/employees:
     get:
       tags: [Employees]
       summary: Get all employees
@@ -71,7 +71,7 @@ paths:
         403:
           description: Not authorized to create employees
 
-  /api/hrm/employees/{id}:
+  /hrm/employees/{id}:
     get:
       tags: [Employees]
       summary: Get employee by ID
@@ -158,7 +158,7 @@ paths:
         404:
           $ref: '#/components/responses/NotFoundError'
 
-  /api/hrm/employees/{id}/documents:
+  /hrm/employees/{id}/documents:
     post:
       tags: [Employees]
       summary: Upload employee document
