--- a/src/swagger/schemas/auth.yaml
+++ b/src/swagger/schemas/auth.yaml
@@ -30,11 +30,12 @@ components:
           type: string
           format: email
           description: User's email address
+          example: admin@xyvin-erp.com
         password:
           type: string
           format: password
           description: User's password
-
+          example: 123456
     AuthResponse:
       type: object
       properties:
